ajout capture + hover

--- a/index2-projets.html
+++ b/index2-projets.html
@@ -8,7 +8,18 @@
     </head>
     
 <body> 
-  <div class="index2"></div>    
+  <div class="index2">
+      <h2>Premier site avec cours gratuit Openclassrooms:</h2>      
+      <div class="capturefirstsite">
+          <img class="capture" src="./images/Capture-ecran-firstsite.png" alt="capture ecran de mon premier site">
+      </div> 
+      <div class="capturecv" >
+        <h2>CV style page web:<br></h2>
+
+
+
+      </div>
+  </div>    
   <div class="galerie">
     <div class="carre imageMarbre">
         <p class="pop">Projets</p>
