dernier reglage ok

--- a/developpementweb.html
+++ b/developpementweb.html
@@ -6,9 +6,11 @@
       <title>Portfolio</title>
     </head>    
     <body> 
-        <div class="developpementweb">         
+        <div class="developpementweb"> 
+            <a href="./index.html" class="cross"> <img src="./images/cross.png"></a>          
         </div>     
         <div class="galerie">
+
               <div class="carre imageMarbre">
                     <p class="pop">Projets</p>
               </div>              
