--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
               </p>
           </section>
           <section class="carre imageMarbre animdev">
-              <p class="pop">Developpement Web</p>
+              <a href="./developpementweb.html" class="pop">Developpement Web</a>
           </section>        
           <section class="carre rail2 animrail">
           </section>          
           <section class="carre imageMarbre animloisirs">
-              <p class="pop">Loisirs</p>    
+            <a href="./loisirs.html" class="pop">Loisirs</a>    
           </section>
           <section class="carre imagepc2 animpc">
           </section>
