--- a/loisirs.html
+++ b/loisirs.html
@@ -6,7 +6,8 @@
       <title>Portfolio</title>
     </head>    
     <body> 
-        <div class="loisirs">         
+        <div class="loisirs">  
+            <a href="./index.html" class="cross"> <img src="./images/cross.png"></a>            
         </div>     
         <div class="galerie">
               <div class="carre imageMarbre">
