--- a/projets.html
+++ b/projets.html
@@ -6,7 +6,8 @@
       <title>Portfolio</title>
     </head>    
     <body> 
-        <div class="projets">    
+        <div class="projets">
+            <a href="./index.html" class="cross"> <img src="./images/cross.png"> </a>  
             <div class="firstsite">
                 <h2 class="h2site">Premier site avec cours gratuit Openclassrooms:</h2>      
                 <img class="capture1" src="./images/Capture-ecran-firstsite.png" alt="capture ecran de mon premier site">
