--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <!-- En-tête de la page -->
     <meta charset="utf-8"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="page.css"/>
     <title>Portfolio</title>
 </head>
@@ -10,10 +12,59 @@
 <main class="galerie">
     <section class="carre imageMarbre animProjet">
         <p class="lienPop">Projets</p>
-        <div class="modal">
-            <div class="modal-content">
-                <span class="close-button">X</span>
-                <h1>Voici quelques aperçu de mes projets!</h1>
+        <div class="popup">
+            <div class="popup-content">
+                <div class="parent_cross">
+                    <img class="close-button" src="./images/cross.png" alt="image de la croix de fermeture de la popup">
+                </div>
+                <div class="parent_projects">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                                    class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                                    aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                                    aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active popup popup-content">
+                                <img src="./images/first_site.png" class="d-block w-100"
+                                     alt="impression écran de mon premier site">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>1er projet</h5>
+                                    <p>Premier site effectué avant ma formation avec OpenClassroom.</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./images/cv_imp_ecr.png" class="d-block w-100"
+                                     alt="impression écran de mon premier cv codé">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>2eme projet</h5>
+                                    <p>Cv codé en début de formation (premier projet de formation).</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./images/projet_notation_voyages.png" class="d-block w-100"
+                                     alt="impression écran projet de notation de voyages">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>3eme projet</h5>
+                                    <p>Site de notation de voyages fait en groupe en milieu de formation.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                                data-bs-slide="précédent">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Précédent</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                                data-bs-slide="suivant">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Suivant</span>
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -32,9 +83,10 @@
     </section>
     <section class="carre imageMarbre animDev ">
         <p class="lienPop">Langages Informatiques</p>
-        <div class="modal">
-            <div class="modal-content">
-                <span class="close-button">X</span>
+        <div class="popup">
+            <div class="popup-content">
+                <span class="close-button"><img class="imgCross" src="./images/cross.png"
+                                                alt="image de la croix de fermeture de la popup"></span>
                 <h1>!!!!!</h1>
             </div>
         </div>
@@ -43,9 +95,10 @@
     </section>
     <section class="carre imageMarbre animContact ">
         <p class="lienPop">Contacts</p>
-        <div class="modal">
-            <div class="modal-content">
-                <span class="close-button">X</span>
+        <div class="popup">
+            <div class="popup-content">
+                <span class="close-button"><img class="imgCross" src="./images/cross.png"
+                                                alt="image de la croix de fermeture de la popup"></span>
                 <h1>??????</h1>
             </div>
         </div>
@@ -53,6 +106,9 @@
     <section class="carre imagepc2 animpc">
     </section>
 </main>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 <script src="./script.js"></script>
 </body>
 </html>
