--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <!-- En-tête de la page -->
     <meta charset="utf-8"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="page.css"/>
     <title>Portfolio</title>
 </head>
@@ -28,13 +28,13 @@
                                     aria-label="Slide 3"></button>
                         </div>
                         <div class="carousel-inner">
-                            <div class="carousel-item active popup popup-content">
+                            <div class="carousel-item active">
                                 <img src="./images/first_site.png" class="d-block w-100"
                                      alt="impression écran de mon premier site">
-                                <div class="carousel-caption d-none d-md-block">
+                                <a class="carousel-caption d-none d-md-block text-decoration-none" href="#">
                                     <h5>1er projet</h5>
                                     <p>Premier site effectué avant ma formation avec OpenClassroom.</p>
-                                </div>
+                                </a>
                             </div>
                             <div class="carousel-item">
                                 <img src="./images/cv_imp_ecr.png" class="d-block w-100"
@@ -106,9 +106,6 @@
     <section class="carre imagepc2 animpc">
     </section>
 </main>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
 <script src="./script.js"></script>
 </body>
 </html>
